--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-    "name": "cheerio_doc",
-    "version": "1.0.0",
-    "description": "",
-    "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "cheerio": "^0.19.0",
-        "request": "^2.57.0"
-    }
+  "name": "cheerio_doc",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "cheerio": "^0.19.0",
+    "request": "^2.57.0",
+    "simplecrawler": "^0.5.2"
+  }
 }
